# sharpapi-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/sharpapi/: __init__.py  _base.py  _utils.py  async_client.py  client.py  exceptions.py  models.py  streaming.py
tests/: conftest.py  test_async_client.py  test_client.py  test_dataframe.py  test_models.py  test_utils.py
