[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharpapi"
version = "0.2.3"
description = "Official Python SDK for the SharpAPI real-time sports betting odds API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SharpAPI", email = "support@sharpapi.io" }]
keywords = ["sports-betting", "odds", "arbitrage", "ev", "api", "real-time", "pinnacle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage = "https://sharpapi.io"
Documentation = "https://docs.sharpapi.io/sdks/python"
Repository = "https://github.com/Sharp-API/sharpapi-python"
Changelog = "https://github.com/Sharp-API/sharpapi-python/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/sharpapi"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
